--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,24 @@
 .my-custom-font {
   font-family: "MyCustomFont", EB Garamond;
 }
+
+
+input[type="radio"][value="red"] + label::before {
+  background-color: red;
+}
+
+input[type="radio"][value="blue"] + label::before {
+  background-color: blue;
+}
+
+input[type="radio"][value="black"] + label::before {
+  background-color: black;
+}
+
+input[type="radio"][value="green"] + label::before {
+  background-color: green;
+}
+
+input[type="radio"][value="pink"] + label::before {
+  background-color: pink;
+}
