--- a/app/globals.css
+++ b/app/globals.css
@@ -5,16 +5,14 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'EB Garamond', serif;
 }
 
-.my-custom-font {
-  font-family: "MyCustomFont", EB Garamond;
-}
+ 
 
 
 input[type="radio"][value="red"] + label::before {
