Swap feature in developement

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 
-input[type="radio"][value="red"] + label::before {
+/* input[type="radio"][value="red"] + label::before {
   background-color: red;
 }
 
@@ -35,4 +35,4 @@ input[type="radio"][value="green"] + label::before {
 
 input[type="radio"][value="pink"] + label::before {
   background-color: pink;
-}
+} */
