--- a/app/globals.css
+++ b/app/globals.css
@@ -9,4 +9,32 @@ html {
   font-family: 'Nunito', sans-serif;
 }
 
+.ant-page-header{
+  padding: 0 0 1rem 0 !important;
+}
+
+.ant-layout-header{
+  background-color: #ffffffe0  !important;
+}
+
+.ant-table-content{
+  min-height: 55vh;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #187EB4;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
 
