--- a/app/globals.css
+++ b/app/globals.css
@@ -38,3 +38,29 @@ html {
 }
 
 
+
+.upload-box {
+  position: relative;
+  width: 450px;
+  height: 450px;
+  background-color: grey;
+  cursor: pointer;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.upload-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.placeholder {
+  text-align: center;
+  color: grey;
+}
+
+
+
